Fixed text alignment

--- a/src/components/Book/Book.module.scss
+++ b/src/components/Book/Book.module.scss
@@ -16,6 +16,7 @@
     &_text {
         padding: 5px;
         margin: 15px;
+        text-align: left;
         &_title::-webkit-scrollbar {
             display: none;
         }
